# MaxToTelegramNotifBot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  healthcheck.py  pyproject.toml
.github/workflows/: publish-image.yml
app/: __init__.py  bootstrap.py  main.py
app/core/: config.py  logging.py
app/domain/: models.py
app/integrations/max_web/: auth.py  browser.py  client.py  detector.py  parser.py  selectors.py
app/integrations/telegram/: client.py  formatter.py
app/services/: heartbeat.py  monitor.py
app/storage/: database.py  repository.py
scripts/: check_environment.py  get_telegram_chat_id.py  inspect_max_page.py  send_test_notification.py
tests/: test_detector.py  test_formatter.py  test_models.py  test_monitor.py  test_parser.py
